answerKey forEach method added (smiley face)

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,7 @@ input[type=radio] {
     display: none;
     margin: auto;
     text-align: center;
+    font-family: arial;
 }
 
 /* ==========================================================================
