--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,15 @@ input[type=radio] {
     text-align: center;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
