--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,6 @@ textarea {
    Lobsterhands' custom styles
    ========================================================================== */
 
-/* @lob Get rid of text highlighting due to misclicks */
-
 body {
     background: #885D33;
     user-select: none;
@@ -145,9 +143,6 @@ input[type=radio] {
     max-width: 450px;
 }
 
-/* @lob Next and Prev buttons need to be stylized so they are only clickable
-*  with a mouseover! Currently, I can click 'Prev' from the right side of Next
-*/
 #btn-next {
     float: right;
 }
@@ -167,6 +162,7 @@ input[type=radio] {
     margin: auto;
     clear: both;
     width: 4em;
+    height: 2.5em;
     background: #CA6808;
 
 }
