--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,8 @@ input[type=radio] {
     max-width: 450px;
 }
 
-#btn-next {
+#btn-next,
+#btn-finish {
     float: right;
 }
 
@@ -157,18 +158,33 @@ input[type=radio] {
     text-align: center;
 }
 
+#btn-submit input[type=submit] {
+    background: #AD835A;
+    color: #EBCFB4;
+    padding: 1em;
+}
+
 #btn-next .btn,
-#btn-prev .btn {
+#btn-prev .btn,
+#btn-finish .btn {
     margin: auto;
     clear: both;
     width: 4em;
     height: 2.5em;
-    background: #CA6808;
-
 }
 
-#btn-next .btn {
+#btn-next .btn,
+#btn-prev .btn {
+    background: #CA6808;
+}
 
+#btn-finish {
+    display: none;
+}
+
+#btn-finish .btn {
+    background: yellow;
+    text-align: center;
 }
 
 #finish {
