--- a/css/main.css
+++ b/css/main.css
@@ -100,13 +100,13 @@ textarea {
 /* @lob Use some SASS for color variables */
 
 body {
-    background: #68AD68;
+    background: #E8F6FF;
     user-select: none;
 }
 
 #quiz-title {
-    margin-top: 40px;
-    color: #D9EFC2;
+    margin-top: 5em;
+    color: #1C7FBC;
 
 }
 
@@ -119,7 +119,7 @@ h1 {
     margin: 20px auto;
     width: 450px;
     height: 300px;
-    background: #fff;
+    background: #BCD5E5;
 }
 
 .quiz-question {
@@ -160,30 +160,33 @@ input[type=radio] {
 
 #btn-submit {
     display: none;
+    position: relative;
     margin: auto;
     text-align: center;
+    clear: both;
 }
 
-#btn-submit input[type=submit] {
-    background: #AD835A;
-    /*position: relative;*/
-    color: #EBCFB4;
-    font-size: 1em;
-    padding: 1em;
-}
+#quiz-form label {
 
+    padding: 10px 50px 10px 0;
+}
 #btn-next .btn,
 #btn-prev .btn,
 #btn-finish .btn {
     margin: auto;
-    clear: both;
     width: 4em;
     height: 2.5em;
 }
 
+#btn-submit .btn {
+    position: relative;
+    height: 2.5em;
+}
+
 #btn-next .btn,
-#btn-prev .btn {
-    background: #D9EFC2;
+#btn-prev .btn ,
+#btn-submit .btn {
+    background: #CFE293;
     font-weight: 600;
     font-size: 1.2em;
 }
